# juce-qt-practice

./: CppModules.md  README.md
Tests/App/App0/: CMakeLists.txt  Main.cpp
Tests/App/App0/Source/: SourceNoise.ixx
Tests/App/App0Header/: CMakeLists.txt  Main.cpp  Main.qml
Tests/App/App0Header/Source/: Noise.cpp
Tests/Audio/ConsoleNoise/: Main.cpp
Tests/Audio/ConsoleNoise/Source/: AudioDeviceManager.ixx  SourceNoise.ixx
Tests/Audio/ConsoleNoiseClean/: CMakeLists.txt  Main.cpp
Tests/Audio/ConsoleNoiseClean/Source/: CustomAudioDeviceManager.ixx  CustomAudioSourcePlayer.ixx
Tests/Audio/ConsoleNoiseCleanHeader/: CMakeLists.txt  Main.cpp
Tests/Audio/ConsoleNoiseCleanHeader/Source/: Noise.cpp  Noise.h
Tests/Audio/ConsoleNoiseMultiThread/: Main.cpp
Tests/Audio/ConsoleNoiseMultiThread/Source/: AudioSourcePlayer.ixx  CustomAudioDeviceManager.ixx  MessengerTrigger.ixx
Tests/GUI/NotifierReceiver/: CMakeLists.txt  Main.cpp  Main.qml  Notif.qml  Receiver.qml
